# sentiment-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  augment_cli.py  best_model.dvc  docker-compose.yml  evaluate.py  pyproject.toml  quantize_cli.py  quantized_model.dvc  stress_test.py  train_pipeline.py
.dvc/: config
.github/workflows/: deploy.yml
data/: .gitignore  dutch_sentences.csv.dvc
reports/: REPORT_v1_7027bbb.md  REPORT_v2_class-weighted.md
src/: data_processor.py  model_trainer.py  predictor.py
test/: test_predictor.py
