[tool.poetry]
name = "sentiment-app"
version = "0.1.0"
description = "Dutch Movie Review Sentiment Classifier"
authors = ["Amir Douzandeh <amirzenoozi72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
transformers = "^4.41.2"
torch = { version = "^2.2.0", source = "pytorch-cpu" }
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.13.1"
pydantic = "^2.7.2"
joblib = "^1.4.2"
langdetect = "^1.0.9"
accelerate = "^1.14.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"