[tool.poetry]
name = "sentiment-app"
version = "0.1.0"
description = "Dutch Movie Review Sentiment Classifier"
authors = ["Amir Douzandeh <amirzenoozi72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
transformers = "^4.41.2"
torch = [
    # Linux (Docker/CI): pull the CPU-only build from PyTorch's index to keep the image small.
    # Cap < 2.8: torch 2.8+ removed the legacy ONNX-exporter internals (e.g. `_attention_scale`)
    # that `optimum` still imports, which breaks loading the quantized ONNX model on the server.
    { version = ">=2.2.0,<2.8", source = "pytorch-cpu", markers = "sys_platform == 'linux'" },
    # macOS/Windows (local dev): that index has no wheels; use the normal PyPI wheel (CPU-only on Mac).
    { version = ">=2.2.0,<2.8", markers = "sys_platform != 'linux'" },
]
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.13.1"
pydantic = "^2.7.2"
joblib = "^1.4.2"
langdetect = "^1.0.9"
accelerate = "^1.14.0"
# ONNX Runtime stack: exports/loads the INT8-quantized model (quantize_cli.py) and
# serves it via the /classify/quantized endpoint.
optimum = { version = "^1.23", extras = ["onnxruntime"] }

[tool.poetry.group.dev.dependencies]
# Dev-only data tooling for augment_cli.py (back-translation augmentation).
# Not needed by the API at runtime, so excluded from the Docker image.
sentencepiece = "^0.2.0"  # required by MarianMT tokenizers
halo = "^0.0.31"          # CLI status spinners

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"