[tool.poetry]
name = "sentiment-app"
version = "0.1.0"
description = "Dutch Movie Review Sentiment Classifier"
authors = ["Amir Douzandeh <amirzenoozi72@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
transformers = "^4.41.2"
torch = [
    { version = ">=2.2.0,<2.8", source = "pytorch-cpu", markers = "sys_platform == 'linux'" },
    { version = ">=2.2.0,<2.8", markers = "sys_platform != 'linux'" },
]
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.13.1"
pydantic = "^2.7.2"
joblib = "^1.4.2"
langdetect = "^1.0.9"
accelerate = "^1.14.0"
optimum = { version = "^1.23", extras = ["onnxruntime"] }

[tool.poetry.group.dev.dependencies]
dvc = { version = "^3.67", extras = ["ssh"] }  # data/model versioning over SSH (pulls dvc-ssh)
sentencepiece = "^0.2.0"  # required by MarianMT tokenizers (augment_cli.py)
halo = "^0.0.31"          # CLI status spinners

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"